--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-iframe": "^1.8.0",
+    "react-pdf": "^5.7.2",
     "react-scripts": "5.0.1",
     "react-spring": "^9.5.4",
     "spring": "^0.0.0",
