--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "react-dom": "^18.2.0",
     "react-iframe": "^1.8.0",
     "react-pdf": "^5.7.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-spring": "^9.5.4",
+    "react-typical": "^0.1.3",
     "spring": "^0.0.0",
     "web-vitals": "^2.1.4"
   },
