--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.2.0",
     "react-iframe": "^1.8.0",
     "react-pdf": "^5.7.2",
+    "react-router-dom": "^6.4.1",
     "react-scripts": "^5.0.1",
     "react-spring": "^9.5.4",
     "react-typical": "^0.1.3",
